# sre-nanobot

./: .gitignore  GITHUB_SETUP.md  PUSH_STATUS.md  PUSH_SUCCESS.md  README.md  config.example.json  package-lock.json  push-to-github.sh  pyproject.toml  test_feishu.py  test_integration.py  test_skills.py  test_skills_api.py  test_skills_v2.py  test_stage2.sh  test_stage3.sh  verify.sh  验证指南.md
docs/: 快速开始指南.md  部署指南.md  阶段 1-完成报告.md  阶段 1-验证报告.md  阶段 2-完成报告.md  阶段 2-测试报告.md  阶段 3-完成报告.md  阶段 4-预案库完善.md  阶段 5-飞书集成.md  阶段 6-WebUI 开发.md  集成测试报告.md  项目总结.md  项目进度总结-2026-02-27.md  飞书集成指南.md
scripts/: test_k8s_mcp.sh
skills/: COMPLETION_REPORT.md  INTEGRATION.md  README.md  TEST_REPORT.md  base.py  loader.py
skills/sre_alert_handler/: SKILL.md  config.yaml  handler.py
skills/sre_incident_analyzer/: SKILL.md  config.yaml  handler.py
sre_nanobot/: __init__.py
sre_nanobot/agents/: __init__.py  autofix_agent.py  base.py  incident_agent.py  k8s_agent.py  monitor_agent.py
sre_nanobot/integrations/: __init__.py  alertmanager_webhook.py  feishu_notifier.py
sre_nanobot/mcp/: __init__.py  k8s_server.py  prometheus_server.py
sre_nanobot/runbooks/: README.md  runbooks.yaml
sre_nanobot/skills/: __init__.py  k8s_skill.md
tests/: PLAYWRIGHT_DEMO_REPORT.md  WEIBO_ACCESS_REPORT.md  playwright_demo.js  weibo_demo.js
webui/: README.md  WEBSOCKET_完成报告.md  WEBUI_进度报告.md  start.sh  测试报告.md
webui/backend/: api_skills.py  main.py  requirements.txt
webui/frontend/: .umirc.ts  package-lock.json  package.json
webui/frontend/src/layouts/: BasicLayout.tsx
(+7 files in other folders)
