[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-nanobot"
version = "0.1.0"
description = "SRE Agent Platform based on NanoBot"
authors = [{name = "Your Team", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nanobot-ai>=0.1.4",
    "kubernetes>=28.0",
    "prometheus-api-client>=0.5",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
sre-nanobot = "sre_nanobot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sre_nanobot*"]
